Fix ios -webkit-overflow-scrolling: touch; Reference: http://patrickmuff.ch/blog/2014/10/01/how-we-fixed-the-webkit-overflow-scrolling-touch-bug-on-ios/ also actually preventing vertical scroll if we detect we're swiping

--- a/vue-swipe-cards.css
+++ b/vue-swipe-cards.css
@@ -18,7 +18,7 @@ vue-swipe-cards{
 	-webkit-overflow-scrolling: auto;
 	overflow-scrolling: auto;
 }
-.vue-swipe-cards .swipe-scroller.momentumScroll {
+.vue-swipe-cards .swipe-scroller.nativeScroll.momentumScroll {
 	-webkit-overflow-scrolling: touch;
 	overflow-scrolling: touch;
 }
